add RestController for Books